data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_1967.wast
;; 8. **Block with Mismatched Result Types and Unreachable**:    Use a block where result types are mismatched, concluding with an `unreachable` instruction to test if `wizard_engine` mishandles result type validation.     ```wasm    block (result i32)       block (result f64)          i32.const 1          br 0          unreachable       end       i64.const 0    end    ```     **Constraint**: This test ensures consistent enforcement of block result type validation to avoid `unreachable`.

(assert_invalid
  (module (func $block-with-mismatched-result-and-unreachable
    (block (result i32)
      (block (result f64)
        i32.const 1
        br 0
        unreachable
      end)
      i64.const 0
    end)
  ))
  "type mismatch"
)